crates/search/tests/dumps/snapshots/mod.rs/import_dump_v5/2.snap
---
source: crates/indexsearch/tests/dumps/mod.rs
---
{
  "results": [
    {
      "uid": 1,
      "batchUid": null,
      "indexUid": "test2",
      "status": "succeeded",
      "type": "documentAdditionOrUpdate",
      "canceledBy": null,
      "details": {
        "receivedDocuments": 10,
        "indexedDocuments": 10
      },
      "error": null,
      "duration": "PT0.076765S",
      "enqueuedAt": "2022-06-08T14:59:29.920479Z",
      "startedAt": "2022-06-08T14:59:29.921016Z",
      "finishedAt": "2022-06-08T14:59:29.997781Z"
    }
  ],
  "total": 2,
  "limit": 1,
  "from": 1,
  "next": 0
}
