crates/search/tests/dumps/snapshots/mod.rs/import_dump_v5/7.snap
---
source: crates/indexsearch/tests/dumps/mod.rs
---
{
  "results": [
    {
      "uid": 4,
      "batchUid": 0,
      "indexUid": null,
      "status": "succeeded",
      "type": "dumpCreation",
      "canceledBy": null,
      "details": {
        "dumpUid": "[uid]"
      },
      "error": null,
      "duration": "[duration]",
      "enqueuedAt": "2022-06-08T15:11:40.604805Z",
      "startedAt": "[date]",
      "finishedAt": "[date]"
    }
  ],
  "total": 5,
  "limit": 1,
  "from": 4,
  "next": 3
}
